@@ -1,3 +1,7 @@
+2010-08-07  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #15386: [Caching framework] Remove needless constant in cache manager
+
 2010-08-06  Oliver Hader  <oliver@typo3.org>
 
 	* Release of TYPO3 4.3.5
